third-party/rust/crates/better_default/1.0.5/tests/compile_fail/incompatible_types.rs
#![allow(dead_code)]

use better_default::Default;

#[derive(Default)]
enum Enum {
    #[default(0: "aaa")]
    Variant(u32, String),

    Variant2,

    Variant3,
}

#[derive(Default)]
enum Enum2 {
    #[default]
    Variant{
        #[default("aaaa")]
        field1: u32,

        field2: String
    },

    Variant2,

    Variant3,
}

#[derive(Default)]
struct Struct {
    #[default("aaaa")]
    field: u32
}

fn main() {}
