third-party/rust/crates/better_default/1.0.5/tests/compile_fail/incompatible_types.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/incompatible_types.rs:7:18
  |
5 | #[derive(Default)]
  |          ------- arguments to this enum variant are incorrect
6 | enum Enum {
7 |     #[default(0: "aaa")]
  |                  ^^^^^ expected `u32`, found `&str`
  |
note: tuple variant defined here
 --> tests/compile_fail/incompatible_types.rs:8:5
  |
8 |     Variant(u32, String),
  |     ^^^^^^^

error[E0308]: mismatched types
  --> tests/compile_fail/incompatible_types.rs:19:19
   |
19 |         #[default("aaaa")]
   |                   ^^^^^^ expected `u32`, found `&str`

error[E0308]: mismatched types
  --> tests/compile_fail/incompatible_types.rs:32:15
   |
32 |     #[default("aaaa")]
   |               ^^^^^^ expected `u32`, found `&str`
